Closed Bug 345059 Opened 18 years ago Closed 18 years ago

Adding a word to the dictionary is slow

Categories

(Core :: Spelling checker, defect, P1)

1.8 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla1.8.1beta2

People

(Reporter: brettw, Assigned: brettw)

References

Details

(Keywords: fixed1.8.1, verified1.8.1.3)

Attachments

(1 file)

For a large textarea such as
  https://bugzilla.mozilla.org/attachment.cgi?id=227870&action=edit
(click edit as comment), it takes a very long time.

mozInlineSpellChecker::SpellCheckSelection should be optimized
Attached patch Speed fixSplinter Review
This fixes the speed problem, it takes about 1/3 the time as before. This patch requires the "Init & Paste optimizations" patch to bug 344895.

It is still a little bit slow. The remaining slowness is due to the call to RemoveAllRanges(). See bug 345050 for this problem.
Attachment #229670 - Flags: review?(roc)
Attachment #229670 - Flags: approval1.8.1?
Priority: -- → P1
Target Milestone: --- → mozilla1.8.1beta2
Depends on: 345101
Can we get this landed on trunk for some bake-time?
Checked in on trunk, needs branch checkin
Whiteboard: baking on trunk before branch checkin
Comment on attachment 229670 [details] [diff] [review]
Speed fix

a=drivers, please land on the 181branch
Attachment #229670 - Flags: approval1.8.1? → approval1.8.1+
Speed fix is on branch. I could not reproduce the scrolling problem I originally reported. I think this was because I had an old build with bug 337871 still in it.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Summary: Adding a word to the dictionary is slow and scrolls the page → Adding a word to the dictionary is slow
Whiteboard: baking on trunk before branch checkin
verified fixed 1.8.1.3 adding a word to the dict is working fast on the Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.3) Gecko/20070326 Thunderbird/2.0.0.0 Mnenhy/0.7.5.0 ID:2007032620 RC
Keywords: verified1.8.1.3
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: