Bug 345059 r+sr=roc Adding a word to the dictionary is slow for large textarea